--- a/oauth-flow/docker-compose.yml
+++ b/oauth-flow/docker-compose.yml
@@ -1,34 +1,38 @@
 version: "3.7"
 services:
   nodeA-backend:
-    image: nutsfoundation/nuts-service-space:latest
+    image: nutsfoundation/nuts-node:latest
     ports:
       - "11323:1323"
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     volumes:
-      - "./common/data/registry:/opt/nuts/registry"
       - "./node-A/nuts.yaml:/opt/nuts/nuts.yaml:ro"
-      - "./node-A/data/keys:/opt/nuts/keys"
-      - "../irma:/opt/nuts/irma:ro"
+      - "./node-A/data:/opt/nuts/data:rw"
+      - "../tls-certs/nodeA-backend-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
+      - "../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
+    healthcheck:
+      interval: 1s # Make test run quicker by checking health status more often
   nodeA:
     image: nginx:1.18
     ports:
       - "10443:443"
     volumes:
       - "./node-A/nginx.conf:/etc/nginx/nginx.conf:ro"
-      - "../keys/nodeA_certificate.pem:/etc/nginx/ssl/server.pem:ro"
-      - "../keys/nodeA_key.pem:/etc/nginx/ssl/key.pem:ro"
+      - "../tls-certs/nodeA-certificate.pem:/etc/nginx/ssl/server.pem:ro"
+      - "../tls-certs/nodeA-certificate.pem:/etc/nginx/ssl/key.pem:ro"
+      - "../tls-certs/truststore.pem:/etc/nginx/ssl/truststore.pem:ro"
       - "./node-A/html:/etc/nginx/html:ro"
   nodeB:
-    image: nutsfoundation/nuts-service-space:latest
+    image: nutsfoundation/nuts-node:latest
     ports:
       - "21323:1323"
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     volumes:
-      - "./common/data/registry:/opt/nuts/registry"
+      - "./node-B/data:/opt/nuts/data:rw"
       - "./node-B/nuts.yaml:/opt/nuts/nuts.yaml:ro"
-      - "./node-B/data/keys:/opt/nuts/keys"
-      - "./node-B/data:/opt/nuts/data"
-      - "../irma:/opt/nuts/irma:ro"
+      - "../tls-certs/nodeB-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
+      - "../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
+    healthcheck:
+      interval: 1s # Make test run quicker by checking health status more often
