--- a/oauth-flow/node-A/nuts.yaml
+++ b/oauth-flow/node-A/nuts.yaml
@@ -1,12 +1,15 @@
-identity: urn:oid:1.3.6.1.4.1.54851.4:00000001
 verbosity: debug
-address: :1323
+datadir: /opt/nuts/data
+http:
+  default:
+    address: :1323
 auth:
-  actingPartyCn: Node A
   publicUrl: http://node-A
   contractValidators:
     - dummy
-crypto:
-  fspath: /opt/nuts/keys
-registry:
-  datadir: /opt/nuts/registry
+  irma:
+    autoUpdateSchemas: false
+network:
+  trustStoreFile: /opt/nuts/truststore.pem
+  certFile: /opt/nuts/certificate-and-key.pem
+  certKeyFile: /opt/nuts/certificate-and-key.pem
