--- a/nuts-network/direct-wan/docker-compose.yml
+++ b/nuts-network/direct-wan/docker-compose.yml
@@ -1,27 +1,26 @@
 version: "3.7"
 services:
   nodeA:
-    image: nutsfoundation/nuts-service-space:latest
+    image: nutsfoundation/nuts-node:latest
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
       - "11323:1323"
     volumes:
       - "./node-A/nuts.yaml:/opt/nuts/nuts.yaml:ro"
-      - "./node-A/data/keys:/opt/nuts/keys"
-      - "../../keys/nodeA_certificate.pem:/opt/keys/server-certificate.pem:ro"
-      - "../../keys/nodeA_key.pem:/opt/keys/server-certificate_key.pem:ro"
-      - "../../irma:/opt/nuts/irma:ro"
-
+      - "../../tls-certs/nodeA-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
+      - "../../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
+    healthcheck:
+      interval: 1s # Make test run quicker by checking health status more often
   nodeB:
-    image: nutsfoundation/nuts-service-space:latest
+    image: nutsfoundation/nuts-node:latest
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
       - "21323:1323"
     volumes:
       - "./node-B/nuts.yaml:/opt/nuts/nuts.yaml:ro"
-      - "./node-B/data/keys:/opt/nuts/keys"
-      - "../../keys/nodeB_certificate.pem:/opt/keys/server-certificate.pem:ro"
-      - "../../keys/nodeB_key.pem:/opt/keys/server-certificate_key.pem:ro"
-      - "../../irma:/opt/nuts/irma:ro"
+      - "../../tls-certs/nodeB-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
+      - "../../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
+    healthcheck:
+      interval: 1s # Make test run quicker by checking health status more often
