--- a/nuts-network/direct-wan/node-A/nuts.yaml
+++ b/nuts-network/direct-wan/node-A/nuts.yaml
@@ -1,18 +1,16 @@
-identity: urn:oid:1.3.6.1.4.1.54851.4:00000001
 verbosity: debug
-address: :1323
+http:
+  default:
+    address: :1323
 auth:
-  actingPartyCn: Node A
   publicUrl: http://node-A
-  irmaConfigPath: /opt/nuts/irma
-  enableCORS: true
-  irmaSchemeManager: irma-demo
-  skipAutoUpdateIrmaSchemas: true
-crypto:
-  fspath: /opt/nuts/keys
+  contractValidators:
+    - dummy
+  irma:
+    autoUpdateSchemas: false
 network:
   publicAddr: nodeA:5555
   grpcAddr:	:5555
-  certFile: /opt/keys/server-certificate.pem
-  certKeyFile: /opt/keys/server-certificate_key.pem
-  enableTLS: true
+  trustStoreFile: /opt/nuts/truststore.pem
+  certFile: /opt/nuts/certificate-and-key.pem
+  certKeyFile: /opt/nuts/certificate-and-key.pem
