--- a/nuts-network/direct-wan/node-B/nuts.yaml
+++ b/nuts-network/direct-wan/node-B/nuts.yaml
@@ -1,19 +1,17 @@
-identity: urn:oid:1.3.6.1.4.1.54851.4:00000002
 verbosity: debug
-address: :1323
+http:
+  default:
+    address: :1323
 auth:
-  actingPartyCn: Node B
-  publicUrl: http://node-b
-  irmaConfigPath: /opt/nuts/irma
-  enableCORS: true
-  irmaSchemeManager: irma-demo
-  skipAutoUpdateIrmaSchemas: true
-crypto:
-  fspath: /opt/nuts/keys
+  publicUrl: http://node-B
+  contractValidators:
+    - dummy
+  irma:
+    autoUpdateSchemas: false
 network:
   bootstrapNodes: nodeA:5555
   publicAddr: nodeB:5555
   grpcAddr:	:5555
-  certFile: /opt/keys/server-certificate.pem
-  certKeyFile: /opt/keys/server-certificate_key.pem
-  enableTLS: true
+  trustStoreFile: /opt/nuts/truststore.pem
+  certFile: /opt/nuts/certificate-and-key.pem
+  certKeyFile: /opt/nuts/certificate-and-key.pem
