--- a/nuts-network/ssl-offloading/node-A/nuts.yaml
+++ b/nuts-network/ssl-offloading/node-A/nuts.yaml
@@ -1,16 +1,18 @@
-identity: urn:oid:1.3.6.1.4.1.54851.4:00000001
 verbosity: debug
-address: :1323
+http:
+  default:
+    address: :1323
 auth:
-  actingPartyCn: Node A
   publicUrl: http://node-A
-  irmaConfigPath: /opt/nuts/irma
-  enableCORS: true
-  irmaSchemeManager: irma-demo
-  skipAutoUpdateIrmaSchemas: true
-crypto:
-  fspath: /opt/nuts/keys
+  contractValidators:
+    - dummy
+  irma:
+    autoUpdateSchemas: false
 network:
   publicAddr: nodeA:5555
   grpcAddr:	:5555
+  # Because the proxy is offloading TLS for this node, enableTLS=false and trustStoreFile is not configured:
   enableTLS: false
+  # However, we do need certFile and certKeyFile for outgoing TLS connections:
+  certFile: /opt/nuts/certificate-and-key.pem
+  certKeyFile: /opt/nuts/certificate-and-key.pem
