--- a/oauth-flow/node-A/nuts.yaml
+++ b/oauth-flow/node-A/nuts.yaml
@@ -4,12 +4,12 @@ http:
   default:
     address: :1323
 auth:
-  publicUrl: http://node-A
-  contractValidators:
+  publicurl: http://node-A
+  contractvalidators:
     - dummy
   irma:
-    autoUpdateSchemas: false
+    autoupdateschemas: false
 network:
-  trustStoreFile: /opt/nuts/truststore.pem
-  certFile: /opt/nuts/certificate-and-key.pem
-  certKeyFile: /opt/nuts/certificate-and-key.pem
+  truststorefile: /opt/nuts/truststore.pem
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
