--- a/nuts-network/ssl-offloading/docker-compose.yml
+++ b/nuts-network/ssl-offloading/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   nodeA-backend:
-    image: nutsfoundation/nuts-node:latest
+    image: nutsfoundation/nuts-node:master
     ports:
       - "11323:1323"
     environment:
@@ -20,7 +20,7 @@ services:
       - "../../tls-certs/nodeA-certificate.pem:/etc/nginx/ssl/key.pem:ro"
       - "../../tls-certs/truststore.pem:/etc/nginx/ssl/truststore.pem:ro"
   nodeB:
-    image: nutsfoundation/nuts-node:latest
+    image: nutsfoundation/nuts-node:master
     ports:
       - "21323:1323"
     environment:
