--- a/oauth-flow/docker-compose.yml
+++ b/oauth-flow/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   nodeA-backend:
-    image: nutsfoundation/nuts-node:master
+    image: nutsfoundation/nuts-node:latest
     ports:
       - "11323:1323"
     environment:
@@ -24,7 +24,7 @@ services:
       - "../tls-certs/truststore.pem:/etc/nginx/ssl/truststore.pem:ro"
       - "./node-A/html:/etc/nginx/html:ro"
   nodeB:
-    image: nutsfoundation/nuts-node:master
+    image: nutsfoundation/nuts-node:latest
     ports:
       - "21323:1323"
     environment:
