--- a/nuts-network/private-transactions/node-B/nuts.yaml
+++ b/nuts-network/private-transactions/node-B/nuts.yaml
@@ -12,6 +12,8 @@ auth:
 vcr:
   overrideissueallpublic: false
 network:
+  v1:
+    adverthashesinterval: 250
   bootstrapnodes: nodeA:5555
   publicaddr: nodeB:5555
   grpcaddr:	:5555
