--- a/nuts-network/gossip/docker-compose.yml
+++ b/nuts-network/gossip/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   nodeA:
-    image: nutsfoundation/nuts-node:master
+    image: &image nutsfoundation/nuts-node:master
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
@@ -11,7 +11,7 @@ services:
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
   nodeB:
-    image: nutsfoundation/nuts-node:master
+    image: *image
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
@@ -21,7 +21,7 @@ services:
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
   nodeC:
-    image: nutsfoundation/nuts-node:master
+    image: *image
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
@@ -31,12 +31,12 @@ services:
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
   nodeD:
-    image: nutsfoundation/nuts-node:master
+    image: *image
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
       - "41323:1323"
     volumes:
-      - "./node-d/nuts.yaml:/opt/nuts/nuts.yaml:ro"
+      - "./node-D/nuts.yaml:/opt/nuts/nuts.yaml:ro"
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
