--- a/storage/redis/docker-compose.yml
+++ b/storage/redis/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   nodeA:
-    image: reinkrul/nuts-node:latest
+    image: nutsfoundation/nuts-node:master
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
@@ -13,7 +13,7 @@ services:
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
   nodeB:
-    image: reinkrul/nuts-node:latest
+    image: nutsfoundation/nuts-node:master
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     ports:
