Fix SSL offloading test

--- a/nuts-network/ssl-offloading/node-A/nginx.conf
+++ b/nuts-network/ssl-offloading/node-A/nginx.conf
@@ -41,8 +41,10 @@ http {
       ssl_client_certificate    /etc/nginx/ssl/truststore.pem;
       ssl_verify_client         on;
       ssl_verify_depth          1;
+
       location / {
         grpc_pass grpc://nodeA-backend;
+        grpc_set_header X-SSL-CERT $ssl_client_escaped_cert;
       }
     }
 }
