--- a/nuts-network/ssl-offloading/node-B/nuts.yaml
+++ b/nuts-network/ssl-offloading/node-B/nuts.yaml
@@ -4,7 +4,6 @@ http:
   default:
     address: :1323
 auth:
-  publicurl: http://node-B
   contractvalidators:
     - dummy
   irma:
@@ -15,6 +14,6 @@ network:
   grpcaddr:	:5555
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
-  certfeyFile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
   v2:
     gossipinterval: 250
