--- a/nuts-network/ssl-offloading/node-B/nuts.yaml
+++ b/nuts-network/ssl-offloading/node-B/nuts.yaml
@@ -1,13 +1,13 @@
 verbosity: debug
 internalratelimiter: false
-http:
-  default:
-    address: :1323
 auth:
   contractvalidators:
     - dummy
   irma:
     autoupdateschemas: false
+tls:
+  offload: incoming
+  certheader: X-SSL-CERT
 network:
   bootstrapnodes: nodeA:443
   publicaddr: nodeB:5555
