--- a/nuts-network/ssl-offloading/haproxy/docker-compose.yml
+++ b/nuts-network/ssl-offloading/haproxy/docker-compose.yml
@@ -8,17 +8,16 @@ services:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     volumes:
       - "./node-A/nuts.yaml:/opt/nuts/nuts.yaml:ro"
-      - "../../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
-      - "../../tls-certs/nodeA-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
+      - "../../../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
+      - "../../../tls-certs/nodeA-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
   nodeA:
-    image: nginx:1.23
+    image: haproxy
     volumes:
-      - "./node-A/nginx.conf:/etc/nginx/nginx.conf:ro"
-      - "../../tls-certs/nodeA-certificate.pem:/etc/nginx/ssl/server.pem:ro"
-      - "../../tls-certs/nodeA-certificate.pem:/etc/nginx/ssl/key.pem:ro"
-      - "../../tls-certs/truststore.pem:/etc/nginx/ssl/truststore.pem:ro"
+      - "./node-A/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro"
+      - "../../../tls-certs/nodeA-certificate.pem:/certificate.pem:ro"
+      - "../../../tls-certs/truststore.pem:/truststore.pem:ro"
   nodeB:
     image: nutsfoundation/nuts-node:master
     ports:
@@ -27,7 +26,7 @@ services:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
     volumes:
       - "./node-B/nuts.yaml:/opt/nuts/nuts.yaml:ro"
-      - "../../tls-certs/nodeB-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
-      - "../../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
+      - "../../../tls-certs/nodeB-certificate.pem:/opt/nuts/certificate-and-key.pem:ro"
+      - "../../../tls-certs/truststore.pem:/opt/nuts/truststore.pem:ro"
     healthcheck:
       interval: 1s # Make test run quicker by checking health status more often
