--- a/nuts-network/ssl-offloading/haproxy/node-A/haproxy.cfg
+++ b/nuts-network/ssl-offloading/haproxy/node-A/haproxy.cfg
@@ -5,6 +5,6 @@ frontend grpc_service
 
 backend grpc_servers
     mode http
-
+    option forwardfor  # for correct IP logging
     http-request set-header X-SSL-CERT %{+Q}[ssl_c_der,base64]
     server node1 nodeA-backend:5555 check proto h2
