workaround for disk permission issues

--- a/nuts-network/private-transactions/node-B/nuts.yaml
+++ b/nuts-network/private-transactions/node-B/nuts.yaml
@@ -21,3 +21,4 @@ network:
   certkeyfile: /opt/nuts/certificate-and-key.pem
   v2:
     gossipinterval: 450
+  nodedid: did:nuts:HkRAaBmMBges7PWrgpvMLKGvUEkeKUNXNEXhvpHY9FUw
