nuts config files use new flags

--- a/nuts-network/ssl-pass-through/node-A/nuts.yaml
+++ b/nuts-network/ssl-pass-through/node-A/nuts.yaml
@@ -7,8 +7,9 @@ auth:
 network:
   publicaddr: nodeA:5555
   grpcaddr:	:5555
+  v2:
+    gossipinterval: 250
+tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
-  v2:
-    gossipinterval: 250
