--- a/oauth-flow/node-A/nuts.yaml
+++ b/oauth-flow/node-A/nuts.yaml
@@ -10,9 +10,10 @@ auth:
     - dummy
   irma:
     autoupdateschemas: false
-network:
+tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+network:
   v2:
     gossipinterval: 500
