--- a/oauth-flow/node-B/nuts.yaml
+++ b/oauth-flow/node-B/nuts.yaml
@@ -11,10 +11,11 @@ auth:
     - dummy
   irma:
     autoupdateschemas: false
-network:
+tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+network:
   bootstrapnodes: nodeA-backend:5555
   v2:
     gossipinterval: 400
