--- a/nuts-network/private-transactions/node-A/nuts.yaml
+++ b/nuts-network/private-transactions/node-A/nuts.yaml
@@ -1,6 +1,7 @@
 verbosity: debug
 internalratelimiter: false
 datadir: /opt/nuts/data
+strictmode: true
 http:
   default:
     address: :1323
@@ -12,11 +13,13 @@ auth:
     autoupdateschemas: false
 vcr:
   overrideissueallpublic: false
-network:
-  publicaddr: nodeA:5555
-  grpcaddr:	:5555
+tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+network:
+  publicaddr: nodeA:5555
+  grpcaddr:	:5555
   v2:
     gossipinterval: 500
+  nodedid: did:nuts:2hNMXVSeUNASPmBYTGckLk7KoBosKVNJE2Ey7Ka61QVZ
