--- a/nuts-network/private-transactions/node-B/nuts.yaml
+++ b/nuts-network/private-transactions/node-B/nuts.yaml
@@ -1,6 +1,7 @@
 verbosity: debug
 internalratelimiter: false
 datadir: /opt/nuts/data
+strictmode: true
 http:
   default:
     address: :1323
@@ -12,12 +13,14 @@ auth:
     autoupdateschemas: false
 vcr:
   overrideissueallpublic: false
+tls:
+  truststorefile: /opt/nuts/truststore.pem
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
 network:
   bootstrapnodes: nodeA:5555
   publicaddr: nodeB:5555
   grpcaddr:	:5555
-  truststorefile: /opt/nuts/truststore.pem
-  certfile: /opt/nuts/certificate-and-key.pem
-  certkeyfile: /opt/nuts/certificate-and-key.pem
   v2:
     gossipinterval: 450
+  nodedid: did:nuts:H8VPcV4TGkjFiq1iT8VQXR6e6scS1jRLWNvU8xEAJpSM
