--- a/nuts-network/ssl-pass-through/node-B/nuts.yaml
+++ b/nuts-network/ssl-pass-through/node-B/nuts.yaml
@@ -8,8 +8,9 @@ network:
   bootstrapnodes: nodeA:5555
   publicaddr: nodeB:5555
   grpcaddr:	:5555
+  v2:
+    gossipinterval: 250
+tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
-  v2:
-    gossipinterval: 250
