--- a/storage/backup-restore/node-A/nuts.yaml
+++ b/storage/backup-restore/node-A/nuts.yaml
@@ -7,6 +7,7 @@ auth:
     autoupdateschemas: false
 network:
   grpcaddr:	:5555
+tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
