Support for v4 branch with old network TLS properties

--- a/nuts-network/direct-wan/node-B/nuts.yaml
+++ b/nuts-network/direct-wan/node-B/nuts.yaml
@@ -13,6 +13,8 @@ network:
   bootstrapnodes: nodeA:5555
   publicaddr: nodeB:5555
   grpcaddr:	:5555
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
 tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
