--- a/nuts-network/private-transactions/node-A/nuts.yaml
+++ b/nuts-network/private-transactions/node-A/nuts.yaml
@@ -23,3 +23,5 @@ network:
   v2:
     gossipinterval: 500
   nodedid: did:nuts:2hNMXVSeUNASPmBYTGckLk7KoBosKVNJE2Ey7Ka61QVZ
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
