--- a/nuts-network/direct-wan/node-A/nuts.yaml
+++ b/nuts-network/direct-wan/node-A/nuts.yaml
@@ -12,6 +12,8 @@ auth:
 network:
   publicaddr: nodeA:5555
   grpcaddr:	:5555
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
 tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
