--- a/nuts-network/private-transactions/node-B/nuts.yaml
+++ b/nuts-network/private-transactions/node-B/nuts.yaml
@@ -24,3 +24,5 @@ network:
   v2:
     gossipinterval: 450
   nodedid: did:nuts:H8VPcV4TGkjFiq1iT8VQXR6e6scS1jRLWNvU8xEAJpSM
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
