--- a/nuts-network/ssl-offloading/haproxy/node-B/nuts.yaml
+++ b/nuts-network/ssl-offloading/haproxy/node-B/nuts.yaml
@@ -17,3 +17,5 @@ network:
   grpcaddr:	:5555
   v2:
     gossipinterval: 250
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
