--- a/nuts-network/ssl-offloading/nginx/node-A/nuts.yaml
+++ b/nuts-network/ssl-offloading/nginx/node-A/nuts.yaml
@@ -16,3 +16,5 @@ network:
   grpcaddr:	:5555
   v2:
     gossipinterval: 250
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
