--- a/nuts-network/ssl-pass-through/node-A/nuts.yaml
+++ b/nuts-network/ssl-pass-through/node-A/nuts.yaml
@@ -9,6 +9,8 @@ network:
   grpcaddr:	:5555
   v2:
     gossipinterval: 250
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
 tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
