--- a/oauth-flow/node-B/nuts.yaml
+++ b/oauth-flow/node-B/nuts.yaml
@@ -19,3 +19,5 @@ network:
   bootstrapnodes: nodeA-backend:5555
   v2:
     gossipinterval: 400
+  certfile: /opt/nuts/certificate-and-key.pem
+  certkeyfile: /opt/nuts/certificate-and-key.pem
