--- a/nuts-network/private-transactions/node-A/nuts.yaml
+++ b/nuts-network/private-transactions/node-A/nuts.yaml
@@ -25,3 +25,4 @@ network:
   nodedid: did:nuts:2hNMXVSeUNASPmBYTGckLk7KoBosKVNJE2Ey7Ka61QVZ
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+  truststorefile: /opt/nuts/truststore.pem
