--- a/nuts-network/ssl-offloading/haproxy/node-B/nuts.yaml
+++ b/nuts-network/ssl-offloading/haproxy/node-B/nuts.yaml
@@ -19,3 +19,4 @@ network:
     gossipinterval: 250
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+  truststorefile: /opt/nuts/truststore.pem
