--- a/nuts-network/ssl-offloading/nginx/node-B/nuts.yaml
+++ b/nuts-network/ssl-offloading/nginx/node-B/nuts.yaml
@@ -14,6 +14,7 @@ tls:
 network:
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+  truststorefile: /opt/nuts/truststore.pem
   bootstrapnodes: nodeA:443
   publicaddr: nodeB:5555
   grpcaddr:	:5555
