--- a/oauth-flow/node-A/nuts.yaml
+++ b/oauth-flow/node-A/nuts.yaml
@@ -19,3 +19,4 @@ network:
     gossipinterval: 500
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+  truststorefile: /opt/nuts/truststore.pem
