--- a/oauth-flow/node-B/nuts.yaml
+++ b/oauth-flow/node-B/nuts.yaml
@@ -21,3 +21,4 @@ network:
     gossipinterval: 400
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
+  truststorefile: /opt/nuts/truststore.pem
