--- a/nuts-network/ssl-offloading/haproxy/docker-compose.yml
+++ b/nuts-network/ssl-offloading/haproxy/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   nodeA-backend:
-    image: nutsfoundation/nuts-node:master
+    image: "${IMAGE_NODE_A:-nutsfoundation/nuts-node:master}"
     ports:
       - "11323:1323"
     environment:
@@ -19,7 +19,7 @@ services:
       - "../../../tls-certs/nodeA-certificate.pem:/certificate.pem:ro"
       - "../../../tls-certs/truststore.pem:/truststore.pem:ro"
   nodeB:
-    image: nutsfoundation/nuts-node:master
+    image: "${IMAGE_NODE_B:-nutsfoundation/nuts-node:master}"
     ports:
       - "21323:1323"
     environment:
