--- a/storage/backup-restore/docker-compose.yml
+++ b/storage/backup-restore/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   nodeA:
-    image: nutsfoundation/nuts-node:master
+    image: "${IMAGE_NODE_A:-nutsfoundation/nuts-node:master}"
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
       NUTS_STORAGE_BBOLT_BACKUP_INTERVAL: ${BACKUP_INTERVAL:-1s}
