--- a/nuts-network/private-transactions/node-A/nuts.yaml
+++ b/nuts-network/private-transactions/node-A/nuts.yaml
@@ -25,3 +25,4 @@ network:
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
   truststorefile: /opt/nuts/truststore.pem
+  nodedid: did:nuts:7sQhZsoRoAVp7hk92mkEBPchZZpUcGZArzSDp5GQ1Wb9
