--- a/nuts-network/private-transactions/node-B/nuts.yaml
+++ b/nuts-network/private-transactions/node-B/nuts.yaml
@@ -26,3 +26,4 @@ network:
   certfile: /opt/nuts/certificate-and-key.pem
   certkeyfile: /opt/nuts/certificate-and-key.pem
   truststorefile: /opt/nuts/truststore.pem
+  nodedid: did:nuts:5EEr2TtNuLHPHRPDCwLihqVo1FJQ2XQsafp5o31Kaq6u
