--- a/nuts-network/private-transactions/node-B/nuts.yaml
+++ b/nuts-network/private-transactions/node-B/nuts.yaml
@@ -1,7 +1,7 @@
 verbosity: debug
+strictmode: true
 internalratelimiter: false
 datadir: /opt/nuts/data
-strictmode: true
 http:
   default:
     address: :1323
@@ -11,6 +11,8 @@ auth:
     - dummy
   irma:
     autoupdateschemas: false
+crypto:
+  storage: fs
 vcr:
   overrideissueallpublic: false
 tls:
