--- a/nuts-network/ssl-offloading/nginx/node-B/nuts.yaml
+++ b/nuts-network/ssl-offloading/nginx/node-B/nuts.yaml
@@ -6,6 +6,8 @@ auth:
     - dummy
   irma:
     autoupdateschemas: false
+crypto:
+  storage: fs
 tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
