--- a/nuts-network/direct-wan/node-A/nuts.yaml
+++ b/nuts-network/direct-wan/node-A/nuts.yaml
@@ -9,6 +9,8 @@ auth:
     - dummy
   irma:
     autoupdateschemas: false
+crypto:
+  storage: fs
 network:
   publicaddr: nodeA:5555
   grpcaddr:	:5555
