--- a/nuts-network/direct-wan/node-B/nuts.yaml
+++ b/nuts-network/direct-wan/node-B/nuts.yaml
@@ -9,6 +9,8 @@ auth:
     - dummy
   irma:
     autoupdateschemas: false
+crypto:
+  storage: fs
 network:
   bootstrapnodes: nodeA:5555
   publicaddr: nodeB:5555
