--- a/openid4vci/issuer-initiated/node-B/nuts.yaml
+++ b/openid4vci/issuer-initiated/node-B/nuts.yaml
@@ -17,6 +17,7 @@ vcr:
   overrideissueallpublic: false
   oidc4vci:
     enabled: true
+    url: http://nodeB:1323
 tls:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate-and-key.pem
