--- a/auth/selfsigned/config/node/nuts.yaml
+++ b/auth/selfsigned/config/node/nuts.yaml
@@ -7,7 +7,7 @@ http:
       origin: "*"
 verbosity: debug
 auth:
-  publicurl: http://localhost:1323
+  publicurl: http://node:1323
   contractvalidators:
     - selfsigned
 network:
